--- a/calendly-clone-api/package.json
+++ b/calendly-clone-api/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon -e js,yaml,yml server.js"
+    "start": "concurrently \"cd calendly-soap-api && node server.js\" \"node server.js\"",
+    "test": "cd tests && node api-comparison.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "swagger-ui-express": "^4.6.3",
+    "express": "^5.1.0",
+    "soap": "^1.1.11",
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "concurrently": "^9.1.2",
+    "nodemon": "^3.1.10"
   }
 }
