--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "graphql",
   "private": true,
   "scripts": {
-    "start": "concurrently \"node calendly-clone-api/server.js\" \"node calendly-clone-graphql/src/server.js\"",
-    "test": "node tests/test-compare.js",
-    "test:compare:js": "node tests/test-compare.js",
-    "test:compare:sh": "bash tests/test.sh"
+    "start": "concurrently \"nodemon calendly-clone-api/server.js\" \"nodemon calendly-clone-graphql/src/server.js\"",
+    "test": "node tests/test-compare.js"
   },
   "devDependencies": {
     "@types/bun": "^1.2.13"
