--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/server": "^4.12.1",
     "@graphql-tools/schema": "^10.0.23",
     "@graphql-tools/utils": "^10.8.6",
+    "axios": "^1.9.0",
     "concurrently": "^9.1.2",
     "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
